--- a/src/MyContainer.css
+++ b/src/MyContainer.css
@@ -1,6 +1,8 @@
 .MyContainer {
-    width: 300px;
-    height: 300px;
+    width: 90vw;
+    height: 90vh;
     border-radius: 10px;
-    background-color: azure;
+    background-image: url('background.avif');
+    box-shadow: 5px 5px 10px 10px rgba(22, 112, 208, 0.5);
+
 }
