--- a/src/MyContainer.css
+++ b/src/MyContainer.css
@@ -1,4 +1,8 @@
 .MyContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     width: 90vw;
     height: 90vh;
     border-radius: 10px;
