--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+
   align-items: center;
   background: #081c15;
 }
@@ -13,10 +20,12 @@ h1 {
   color: aliceblue;
   font-family: 'Noto Sans TC', sans-serif;
   font-weight: 500;
+  font-size: 3em;
 }
 
 p {
   color: aliceblue;
   font-family: 'Noto Sans TC', sans-serif;
   font-weight: 500;
+  font-size: 2em;
 }
