--- a/src/MyContainer.css
+++ b/src/MyContainer.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
     align-items: center;
     width: 90vw;
-    height: 90vh;
+    height: 550px;
     border-radius: 10px;
     background-image: url('background.avif');
     box-shadow: 5px 5px 10px 10px rgba(22, 112, 208, 0.5);
