--- a/src/WeatherData.css
+++ b/src/WeatherData.css
@@ -1,5 +1,7 @@
 .WeatherData {
     position: relative;
-
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
 }
