--- a/src/MyContainer.css
+++ b/src/MyContainer.css
@@ -6,7 +6,7 @@
     width: 90vw;
     height: 550px;
     border-radius: 10px;
-    background-image: url('background.avif');
+    background-image: url('../background.avif');
     box-shadow: 5px 5px 10px 10px rgba(22, 112, 208, 0.5);
 
 }
