--- a/src/Component/ContainerV2.css
+++ b/src/Component/ContainerV2.css
@@ -1,10 +1,12 @@
 .ContainerV2 {
     width: 370px;
-    height: 550px;
+    min-height: 550px;
+    overflow-y: auto;
     background-color: #8ecae6;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 
 }
