--- a/src/Component/MainInfo.css
+++ b/src/Component/MainInfo.css
@@ -3,19 +3,20 @@
     flex-direction: column;
     align-items: center;
     height: 40%;
-    position: relative;
+    position: absolute;
+    top: 10px;
     justify-content: center;
 }
 
 .UserPos {
     position: absolute;
     font-size: 2em;
-    top: 30px;
+    top: 25px;
 }
 
 .Temp {
     position: absolute;
-    font-size: 5.5em;
+    font-size: 5em;
     left: 15px;
     top: 40px;
 }
@@ -23,14 +24,14 @@
 .Weather {
     position: relative;
     font-size: 1.2em;
-    top: 85px;
+    top: 75px;
 
 }
 
 .MinMaxT {
     position: relative;
     font-size: 1.2em;
-    top: 65px;
+    top: 55px;
     left: 5px;
 
 }
