--- a/src/Component/Data10Days.css
+++ b/src/Component/Data10Days.css
@@ -1,9 +1,11 @@
 .Data10Days {
     width: 90%;
-    /* height: 550px; */
+    height: 530px;
     border-radius: 10px;
-    /* position: absolute; */
-    /* top: 380px; */
+    position: absolute;
+    top: 380px;
+    margin-top: 50px;
+    overflow-y: auto;
 }
 
 .SubTitle {
