--- a/src/Component/ContainerV2.css
+++ b/src/Component/ContainerV2.css
@@ -1,6 +1,6 @@
 .ContainerV2 {
     width: 370px;
-    min-height: 550px;
+    height: 550px;
     overflow-y: auto;
     border-radius: 10px;
     display: flex;
@@ -8,4 +8,13 @@
     align-items: center;
     position: relative;
     background-position: 20% 76%;
+}
+
+.aa {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
