--- a/src/Component/Data10Days.css
+++ b/src/Component/Data10Days.css
@@ -13,7 +13,7 @@
     top: 140px;
     z-index: 1;
     width: 90%;
-    height: 30px;
+    min-height: 30px;
     border-radius: 10px;
     transition: opacity 0.1s ease-in-out;
 
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 40px;
+    top: 10px;
     min-height: 560px;
 }
 
@@ -41,7 +41,7 @@
 
 .myhr24 {
     position: absolute;
-    top: 15px;
+    top: 13px;
     border: 1px solid rgba(206, 212, 218, 0.7);
     width: 90%;
     left: 15px;
