--- a/src/Component/MainInfo.css
+++ b/src/Component/MainInfo.css
@@ -6,36 +6,51 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    margin-top: 30px;
-    width: 90%;
+    /* margin-bottom: 30px; */
+    width: 100%;
     /* background-color: rgba(255, 255, 255, 1);
     width: 90%; */
+}
+
+.MainInfoV2 {
+    display: flex;
+    font-size: 10px;
+    top: 70px;
+    position: relative;
 }
 
 .UserPos {
     position: absolute;
     font-size: 2em;
-    top: 0px;
+    top: 20px;
 }
 
 .Temp {
     position: absolute;
     font-size: 5em;
     margin-left: 10px;
-    top: 15px;
+    top: 35px;
+}
+
+.TempV2 {
+    margin-right: 10px;
+}
+
+.WeatherV2 {
+    margin-left: 10px;
 }
 
 .Weather {
     position: absolute;
     font-size: 1.2em;
-    top: 115px;
+    top: 140px;
 
 }
 
 .MinMaxT {
     position: relative;
     font-size: 1.2em;
-    top: 140px;
+    top: 165px;
     left: 5px;
 
 }
