--- a/src/Component/ContainerV2.css
+++ b/src/Component/ContainerV2.css
@@ -1,3 +1,13 @@
+@keyframes backgroundAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
 .ContainerV2 {
     width: 370px;
     height: 550px;
@@ -7,6 +17,6 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    background-position: 20% 76%;
+    animation: backgroundAnimation 5s linear infinite;
 
 }
