--- a/src/Component/MainInfo.css
+++ b/src/Component/MainInfo.css
@@ -1,22 +1,34 @@
+@keyframes backgroundAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    100% {
+        background-position: 100% 50%;
+    }
+}
+
 .MainInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 150px;
+    min-height: 200px;
     position: sticky;
     top: 0px;
     z-index: 1;
     /* margin-bottom: 30px; */
     width: 100%;
+    animation: backgroundAnimation 5s linear infinite;
     /* background-color: rgba(255, 255, 255, 1);
     width: 90%; */
 }
 
 .MainInfoV2 {
     display: flex;
-    font-size: 10px;
-    top: 70px;
+    font-size: 8px;
+    top: 0px;
     position: relative;
+    transition: opacity 0.2s ease-in-out;
 }
 
 .UserPos {
@@ -42,15 +54,16 @@
 
 .Weather {
     position: absolute;
-    font-size: 1.2em;
+    font-size: 1.1em;
     top: 140px;
 
 }
 
 .MinMaxT {
     position: relative;
-    font-size: 1.2em;
-    top: 165px;
+    font-size: 1.1em;
+    top: 140px;
     left: 5px;
+
 
 }
