--- a/src/Component/Row24Hr.css
+++ b/src/Component/Row24Hr.css
@@ -15,12 +15,9 @@
 
 
 
-.aa {
+.MiddleRow {
     position: relative;
     width: 100%;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
     top: 0px;
     min-height: 50px;
 
@@ -31,22 +28,17 @@
     min-height: 140px;
     border-radius: 10px;
     display: flex;
-
     overflow-x: auto;
     overflow-y: hidden;
-    /* margin-top: 10px; */
     position: relative;
-    /* padding-top: 10px; */
     top: 0px;
     margin-top: -15px;
-    /* transition: opacity 0.3s ease-in-out; */
 }
 
 .Item1Hr {
     display: flex;
     flex-direction: column;
     min-width: 25%;
-    /* height: 5%; */
     align-items: center;
     margin-top: 15px;
 
@@ -59,10 +51,10 @@
 }
 
 .Pop {
-    font-size: 0.5em;
+    font-size: 0.7em;
     text-align: center;
     color: #48cae4;
-    margin-top: -4px;
+    margin-top: -2px;
 }
 
 .Img {
