--- a/src/Component/MainInfo.css
+++ b/src/Component/MainInfo.css
@@ -16,14 +16,7 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    /* margin-bottom: 30px; */
     width: 100%;
-    /* background-position: 1000px 1440px; */
-    /* animation: backgroundAnimation 5s linear infinite alternate; */
-
-    /* 延迟动画开始时间以匹配动画周期 */
-    /* background-color: rgba(255, 255, 255, 1);
-    width: 90%; */
 }
 
 .MainInfoAnime {
@@ -34,14 +27,8 @@
     position: sticky;
     top: 0px;
     z-index: 1;
-    /* margin-bottom: 30px; */
     width: 100%;
-    /* background-position: 1000px 1440px; */
-    animation: backgroundAnimation 250s linear infinite alternate;
-
-    /* 延迟动画开始时间以匹配动画周期 */
-    /* background-color: rgba(255, 255, 255, 1);
-    width: 90%; */
+    animation: backgroundAnimation 150s linear infinite alternate;
 }
 
 .MainInfoV2 {
@@ -57,6 +44,7 @@
     font-size: 2em;
     top: 20px;
     margin: 0;
+    cursor: pointer;
 }
 
 .Temp {
@@ -65,6 +53,7 @@
     margin-left: 10px;
     margin-bottom: 0px;
     top: 35px;
+    cursor: pointer;
 
 }
 
@@ -91,6 +80,4 @@
     top: 165px;
     left: 5px;
     margin-bottom: 0px;
-
-
 }
