--- a/src/Component/Page2Container.css
+++ b/src/Component/Page2Container.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    background-color: #003049;
+    background-color: #22333b;
 }
 
 .MyText {
